# shs

./: Cargo.toml  README.md
examples/: dict.rs  errors.rs  hello.rs
src/: lib.rs  status_code.rs
tests/: check_readme.rs
