[package]
name = "shs"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bufstream = "0.1"
log = "0.4"
fehler = "1.0"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
simple-logging = "2.0"
