[package]
name = "shs"
version = "0.3.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
categories = ["web-programming::http-server"]
keywords = ["server", "http"]
license = "Apache-2.0"
readme = "README.md"
description = "Easy-to-use non-async HTTP server"
repository = "https://github.com/nicholasbishop/shs"

[dependencies]
anyhow = "1.0"
bufstream = "0.1"
log = "0.4"
fehler = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicase = "2.6"
url = "2.1"

[dev-dependencies]
simple-logging = "2.0"

[[example]]
name = "dict"
test = true